newtype-tools/tests/newtype-fail/newtype-nested-name-value.stderr
error: expected `#[newtype(from(...))]`
 --> tests/newtype-fail/newtype-nested-name-value.rs:2:11
  |
2 | #[newtype(from = Oranges)]
  |           ^^^^^^^^^^^^^^
